<resources>
    <string name="app_name">XDPlayer</string>
    <string name="copyright">Copyright 2016–2017 liying All Rights Reserved</string>
    <string name="web_site">http://duduhuo.cc/</string>
    <string name="short_desc">多功能视频播放器</string>
    <string name="video_layout_loading">正在缓冲&#8230;</string>
    <string name="toast_key_back">再按一次，退出程序</string>
    <string name="toast_key_backplay">再按一次，退出播放</string>

    <!--关于界面字符串-->
    <string name="about_author_email">作者邮箱</string>
    <string name="about_author_weibo">作者微博</string>
    <string name="about_source_open_failed">未安装网页浏览器，打开失败</string>
    <string name="about_author_email_c">liruoer2008@yeah.net</string>
    <string name="about_author_weibo_c">"@"独毒火</string>
    <string name="about_recommend">应用推荐</string>
    <string name="about_share_xdplayer">分享应用</string>
    <string name="about_official_website">官方下载</string>
    <string name="open_source_site">开源地址：https://github.com/liying2008/XDPlayer</string>


    <string name="recommend_name_circle">CircleTODO</string>
    <string name="recommend_name_ipgw">东大IPGW</string>
    <string name="recommend_name_sec">SEC密码本</string>

    <string name="recommend_desc_circle">用色彩标记日程</string>
    <string name="recommend_desc_ipgw">东北大学校园网关快速登录</string>
    <string name="recommend_desc_sec">安全可靠的密码存储工具</string>
</resources>
