<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bar_back_selector"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="关于XDPlayer"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="119dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_show"/>

            <TextView
                android:id="@+id/tvDeclare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/short_desc"
                android:textColor="@color/app_name_color"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/open_source_site"
                android:textSize="12sp"/>

            <RelativeLayout
                style="@style/AboutItemRL"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_top"
                android:onClick="sendMail">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/line_color"/>

                <TextView
                    style="@style/AboutItemLeftText"
                    android:text="@string/about_author_email"/>

                <TextView
                    style="@style/AboutItemRightText"
                    android:text="@string/about_author_email_c"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/AboutItemRL"
                android:background="@drawable/selector_middle"
                android:onClick="onWeiboClick">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/line_color"/>

                <TextView
                    style="@style/AboutItemLeftText"
                    android:text="@string/about_author_weibo"/>

                <TextView
                    style="@style/AboutItemRightText"
                    android:text="@string/about_author_weibo_c"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/AboutItemRL"
                android:background="@drawable/selector_middle"
                android:onClick="onRecommendClick">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/line_color"/>

                <TextView
                    style="@style/AboutItemLeftText"
                    android:text="@string/about_recommend"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/arrow"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/AboutItemRL"
                android:background="@drawable/selector_bottom"
                android:onClick="onShareClick">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/line_color"/>

                <TextView
                    style="@style/AboutItemLeftText"
                    android:text="@string/about_share_xdplayer"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/arrow"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>